# python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  copier.yaml  pyproject.toml
.cursor/rules/: copier-template.mdc  database.mdc  development.mdc  python.mdc  testing.mdc
.github/actions/validation/: action.yaml
.github/workflows/: ci.yaml
scripts/: app.toml
template/: .copier-answers.yml.jinja  .pre-commit-config.yaml  AGENTS.md.jinja  README.md.jinja  pyproject.toml.jinja  {% if include_claude_code %}CLAUDE.md{% endif %}.jinja  {% if include_docker %}Dockerfile{% endif %}.jinja  {% if license != 'None' %}LICENSE{% endif %}.jinja
template/scripts/: app.toml.jinja
template/tests/: test_core.py.jinja
template/{% if include_cursor_rules %}.cursor{% endif %}/rules/: database.mdc.jinja  development.mdc.jinja  python.mdc.jinja
template/{% if include_github_actions %}.github{% endif %}/actions/validation/: action.yaml
template/{% if include_github_actions %}.github{% endif %}/workflows/: ci.yaml.jinja  template-update.yaml.jinja
template/{{project_slug}}/: main.py.jinja
tests/: test_core.py  test_template.py
