[project]
name = "python-copier-template"
version = "0.0.1"
description = "A Copier template for Python projects with UV, Ruff, Mypy, and Pytest."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Franco Bocci", email = "francogbocci@gmail.com" } ]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.0.0",
    "mypy>=1.15.0",
    "poethepoet>=0.35.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
output-format = "full"
line-length = 88
fix = true
# Exclude template directory from linting (it contains Jinja templates)
exclude = ["template"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",      # Type hints related, let mypy handle these.
    "COM812",   # "Trailing comma missing". If black is happy, we are happy.
    "D",        # Docstrings related, way too strict to our taste
    "ISC001",   # Implicit string concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG",      # "Unused function argument". Fixtures are often unused.
    "S101",     # "Use of `assert` detected"
    "S106",     # "Possible hardcoded password"
    "S603",     # `subprocess` call - safe in tests
    "S607",     # Starting a process with a partial executable path - safe in tests
    "PT004",    # Does not return anything, add leading underscore
    "PLR2004",  # Magic value used in comparison
]

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
plugins = []
ignore_missing_imports = true
exclude = ["template"]

[tool.poe]
include = "scripts/app.toml"
